# Eesha

./: .gitignore  Cargo.toml  README.md  build.rs  org.eesha.browser.desktop  org.eesha.browser.yml  shell.nix
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: build-release.yml  build.yml  doc.yml  release-eesha.yml  release-mobile-macos.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/eesha/browser/: EeshaBrowser.kt
android/app/src/main/res/drawable/: ic_back.xml  ic_forward.xml  ic_home.xml  ic_refresh.xml  progress_bar.xml  splash_screen.xml  url_bar_bg.xml
android/app/src/main/res/layout/: activity_browser.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: network_security_config.xml
desktop/: CMakeLists.txt  main.js  package.json  preload.js
desktop/cmake/: DownloadCEF.cmake
desktop/include/: browser_app.h  browser_client.h  browser_window.h
desktop/renderer/: app.js  index.html  styles.css
desktop/src/: browser_app.cpp  browser_client.cpp  browser_window.cpp  main.cpp  window_delegate.cpp
eesha-embed/: Cargo.toml  build.rs
eesha-embed/src/: builder.rs  lib.rs  main.rs
eesha_build/: Cargo.toml  README.md
eesha_build/src/: lib.rs
eesha_messages/: Cargo.toml
eesha_messages/src/: lib.rs
etc/: package_libs.py
ios/: create_xcodeproj.sh  project.yml
ios/Eesha/: AppDelegate.swift  BrowserViewController.swift  Info.plist
ios/Eesha/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Eesha/Assets.xcassets/EeshaIcon.imageset/: Contents.json
ios/Eesha/Assets.xcassets/EeshaLogo.imageset/: Contents.json
ios/Eesha/Assets.xcassets/SplashImage.imageset/: Contents.json
ios/Eesha/Base.lproj/: LaunchScreen.storyboard
resources/: crash.html  directory-listing.html  eesha.rc  neterror.html  newtab.html  splash.html
resources/components/: bookmark.html  downloads.html
resources/components/prompt/: alert.html  allow_deny.html  http_basic_auth.html  ok_cancel.html  prompt.html
shared/icons/: icon32x32.rgba
shared/resources/: newtab.html
src/: android.rs  app.rs  clipboard.rs  compositor.rs  config.rs  download.rs  errors.rs  lib.rs  main.rs  rendering.rs  storage.rs  test.rs  window.rs
src/chrome/: event.rs  icons.rs  keyboard.rs  mod.rs  native_chrome.rs  painter.rs  state.rs  theme.rs  url_input.rs  widget.rs  widgets.rs
src/chrome/icons/: back.rgba  bookmark.rgba  bookmark_filled.rgba  close.rgba  close_tab.rgba  download.rgba  forward.rgba  home.rgba  menu.rgba  new_tab.rgba  refresh.rgba  shield.rgba
src/webview/: context_menu.rs  history_menu.rs  prompt.rs  webview.rs  webview_menu.rs
support/android/apk/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
support/android/apk/jni/: Android.mk
support/android/apk/servoapp/: build.gradle.kts
support/android/apk/servoapp/src/main/: AndroidManifest.xml
support/android/apk/servoapp/src/main/java/org/eesha/browser/: EeshaActivity.java
support/android/apk/servoapp/src/main/res/values/: strings.xml  styles.xml
support/ios/EeshaApp/: Info.plist  main.swift
support/ios/EeshaApp/Base.lproj/: LaunchScreen.storyboard
tests/: general.rs
