[workspace]
members = ["eesha-embed", "eesha_messages", "eesha_build"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/eesha-browser/eesha"
repository = "https://github.com/eesha-browser/eesha"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
ipc-channel = "0.19"
bincode = "1"
url = { version = "2.5.2", features = ["serde"] }
log = "0.4"
headers = "0.4"
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dpi = { version = "0.1", features = ["serde"] }

[package]
name = "eesha"
version.workspace = true
edition.workspace = true
authors = ["Eesha Browser Project"]
license.workspace = true
description = "Eesha - A modern web browser powered by Servo"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
categories = ["web-programming"]

[package.metadata.packager]
name = "eesha"
product-name = "Eesha"
identifier = "org.eesha.browser"
version = "0.2.0"
before-each-package-command = "python etc/package_libs.py"
resources = [
  "resources",
  "icons",
  "target/release/build/**/libEGL.dll",
  "target/release/build/**/libGLESv2.dll",
  "target/release/lib",
]
icons = ["icons/icon256x256.png", "icons/icon.ico"]

[package.metadata.packager.nsis]
appdata-paths = ["$LOCALAPPDATA/$IDENTIFIER"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-linux-android",
  "aarch64-apple-ios",
]

[lib]
name = "eesha"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
bluetooth = [
    "bluetooth_traits",
    "dep:bluetooth",
    "constellation/bluetooth",
    "constellation_traits/bluetooth",
    "script/bluetooth",
    "script_traits/bluetooth",
]
background_hang_monitor = ["background_hang_monitor/sampler"]
default = ["bluetooth", "background_hang_monitor"]
packager = ["dep:cargo-packager-resource-resolver"]
flatpak = []
tracing = []
embed-useragent-stylesheets = []

[build-dependencies]
cfg_aliases = "0.2"
embed-resource = { version = "3", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"

[dependencies]
# Force vendored OpenSSL for cross-compilation (Android/iOS)
openssl-sys = { version = "0.9", features = ["vendored"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
euclid = "0.22"
getopts = "0.2.17"
gleam = "0.15"
glutin = "0.32.0"
glutin-winit = "0.5.0"
ipc-channel = { workspace = true }
keyboard-types = "0.7"
log = { workspace = true }
raw-window-handle = { version = "0.6", features = ["std"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
sparkle = "0.1.26"
thiserror = "1.0"
winit = { version = "0.30", features = ["rwh_06"] }
dpi = { workspace = true }
url = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
eesha_messages = { path = "./eesha_messages" }
serde = { workspace = true }
serde_json = "1.0"
bincode = { workspace = true }
mime = "0.3"
uuid = { workspace = true }
# rfd (file dialogs) and arboard (clipboard) are not available on Android/iOS
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
# Servo repo crates
background_hang_monitor = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
base = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
bluetooth = { git = "https://github.com/servo/servo.git", rev = "5e2d42e", optional = true }
bluetooth_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e", optional = true }
canvas = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
compositing_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
constellation = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
constellation_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
devtools = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
embedder_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
fonts = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
layout_thread_2020 = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
media = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
net = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
net_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
profile = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
profile_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
script = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
script_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
servo_allocator = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
servo_config = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
servo_geometry = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
servo_url = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
webdriver_server = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
webgpu = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
webgpu_traits = { git = "https://github.com/servo/servo.git", rev = "5e2d42e" }
# Servo org crates
servo-media = { git = "https://github.com/servo/media" }
servo-media-dummy = { git = "https://github.com/servo/media" }
stylo = { git = "https://github.com/servo/stylo", branch = "2025-03-15" }
stylo_traits = { git = "https://github.com/servo/stylo", branch = "2025-03-15" }
webrender = { git = "https://github.com/servo/webrender", branch = "0.66", features = ["capture"] }
webrender_api = { git = "https://github.com/servo/webrender", branch = "0.66" }
wr_malloc_size_of = { git = "https://github.com/servo/webrender", branch = "0.66" }
# Packager feature
cargo-packager-resource-resolver = { version = "0.2.0", features = [
  "auto-detect-format",
], optional = true }
chrono = "0.4.41"
percent-encoding = "2.3.1"
directories = "6.0.0"

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
notify-rust = { version = "4.11.5", features = ["images"] }
rfd = "0.15"
arboard = "3.4.0"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
notify-rust = "4.11.5"
muda = "0.15"
rfd = "0.15"
arboard = "3.4.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2.2", features = ["NSThread"] }
objc2-app-kit = { version = "0.2", features = [
  "NSView",
  "NSResponder",
  "NSWindow",
] }
# aws-lc-rs needs bindgen for iOS since pre-generated bindings aren't available
aws-lc-rs = { version = "1", features = ["bindgen"] }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["rwh_06", "android-game-activity"] }

[[test]]
name = "general"
harness = false

[profile.release-lto]
inherits = "release"
lto = true

# Declare expected cfgs from cfg_aliases in build.rs
# Note: `windows` and `unix` are built-in Rust cfg keys, no declaration needed.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(linux)', 'cfg(macos)', 'cfg(ios)', 'cfg(android)', 'cfg(apple)'] }

# Patch surfman to use the Eesha fork with iOS EAGL backend support
[patch."https://github.com/servo/surfman"]
surfman = { git = "https://github.com/eesha-co/surfman", branch = "main" }

# Patch servo to use the Eesha fork with iOS font platform support
[patch."https://github.com/servo/servo"]
background_hang_monitor = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
base = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
bluetooth = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
bluetooth_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
canvas = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
compositing_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
constellation = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
constellation_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
devtools = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
embedder_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
fonts = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
layout_thread_2020 = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
media = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
net = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
net_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
profile = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
profile_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
script = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
script_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
servo_allocator = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
servo_config = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
servo_geometry = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
servo_url = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
webdriver_server = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
webgpu = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
webgpu_traits = { git = "https://github.com/eesha-co/servo", branch = "eesha-ios" }
