[package]
name = "eesha-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
ipc-channel = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
http = { workspace = true }
log = { workspace = true }
dpi = { workspace = true }
uuid = { workspace = true }
eesha_messages = { path = "../eesha_messages" }

[build-dependencies]
eesha_build = { path = "../eesha_build" }
